--- a/TimeHopper/Storyboards/Questions.storyboard
+++ b/TimeHopper/Storyboards/Questions.storyboard
@@ -28,7 +28,7 @@
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" title="Button"/>
                                         <connections>
-                                            <action selector="firstAnswerButtonPressed:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="zx1-u1-dY0"/>
+                                            <action selector="answerButtonPressed:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="REq-kw-3m8"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Om-NP-jh1">
@@ -39,7 +39,7 @@
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" title="Button"/>
                                         <connections>
-                                            <action selector="secondAnswerButtonPressed:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="PeI-bS-cbf"/>
+                                            <action selector="answerButtonPressed:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="215-15-q4h"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YO4-q1-d1Q">
@@ -50,7 +50,7 @@
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" title="Тайный путь"/>
                                         <connections>
-                                            <action selector="thirdAnswerButtonPressed:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="QfU-sg-xFp"/>
+                                            <action selector="secretTuttonPressed:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="JSe-n3-NUx"/>
                                         </connections>
                                     </button>
                                 </subviews>
