--- a/TimeHopper/Storyboards/Location.storyboard
+++ b/TimeHopper/Storyboards/Location.storyboard
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Root View Controller-->
+        <!--Локации-->
         <scene sceneID="Wn0-t9-zj6">
             <objects>
                 <tableViewController id="Lz4-Ft-diJ" customClass="LocationTableViewController" customModule="TimeHopper" customModuleProvider="target" sceneMemberID="viewController">
@@ -18,15 +18,31 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="yOq-B9-guL">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="location" textLabel="M7Q-sh-6cS" detailTextLabel="Sxz-K6-lZc" style="IBUITableViewCellStyleSubtitle" id="yOq-B9-guL">
                                 <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="yOq-B9-guL" id="r6V-Z9-gB4">
                                     <rect key="frame" x="0.0" y="0.0" width="393" height="43.666667938232422"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="M7Q-sh-6cS">
+                                            <rect key="frame" x="20" y="6.0000000000000009" width="25" height="14.333333333333334"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Sxz-K6-lZc">
+                                            <rect key="frame" x="19.999999999999996" y="22.333333333333336" width="43.666666666666664" height="14.333333333333334"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="Y6W-OH-hqX" kind="show" id="J9K-Mq-6Rb"/>
+                                    <segue destination="Y6W-OH-hqX" kind="show" id="nJ2-zS-mWR"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -35,19 +51,19 @@
                             <outlet property="delegate" destination="Lz4-Ft-diJ" id="4Iv-mA-IFB"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="J5A-75-GJH"/>
+                    <navigationItem key="navigationItem" title="Локации" id="J5A-75-GJH"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3Fj-Ig-pNb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3348.8549618320608" y="30.281690140845072"/>
+            <point key="canvasLocation" x="2938" y="-356"/>
         </scene>
         <!--Путеводитель-->
         <scene sceneID="y8s-Cl-PYZ">
             <objects>
                 <navigationController id="2iA-Jb-d1P" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Путеводитель" image="location.magnifyingglass" catalog="system" id="I4e-Uv-gcI"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="3CR-cD-Viq">
-                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="3CR-cD-Viq">
+                        <rect key="frame" x="0.0" y="59" width="393" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -56,7 +72,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aUd-0S-ct4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2631.2977099236641" y="29.577464788732396"/>
+            <point key="canvasLocation" x="1755" y="-355"/>
         </scene>
         <!--Detailed Information View Controller-->
         <scene sceneID="s0d-6b-0kx">
@@ -67,7 +83,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jog-0c-Eq2">
-                                <rect key="frame" x="16" y="123" width="361" height="666"/>
+                                <rect key="frame" x="16" y="175" width="361" height="614"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -83,10 +99,13 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="OJW-OX-2x4"/>
+                    <connections>
+                        <outlet property="detailedInformation" destination="Jog-0c-Eq2" id="kSE-yA-xSY"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4165.6488549618316" y="29.577464788732396"/>
+            <point key="canvasLocation" x="4080" y="-356"/>
         </scene>
         <!--Локация-->
         <scene sceneID="IuB-Zz-I95">
@@ -113,10 +132,13 @@
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Локация" image="location" catalog="system" id="Kub-St-fjo"/>
+                    <connections>
+                        <outlet property="welcomeLabel" destination="bfY-2g-9p9" id="ws7-8X-qom"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JCQ-nL-eFm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1755" y="424"/>
+            <point key="canvasLocation" x="1755" y="-1077"/>
         </scene>
         <!--Location Tab Bar Controller-->
         <scene sceneID="52b-uw-kaA">
@@ -124,6 +146,7 @@
                 <tabBarController storyboardIdentifier="location" automaticallyAdjustsScrollViewInsets="NO" id="qao-Vl-wD2" customClass="LocationTabBarController" customModule="TimeHopper" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Rll-f1-nH7">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
@@ -134,7 +157,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PcK-mi-B2s" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="890.83969465648852" y="29.577464788732396"/>
+            <point key="canvasLocation" x="845" y="-708"/>
         </scene>
     </scenes>
     <resources>
