--- a/TimeHopper/Storyboards/TeamInfo.storyboard
+++ b/TimeHopper/Storyboards/TeamInfo.storyboard
@@ -18,26 +18,26 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="35" translatesAutoresizingMaskIntoConstraints="NO" id="BW0-hF-mGV">
-                                <rect key="frame" x="22.5" y="90" width="275" height="115.5"/>
+                                <rect key="frame" x="11.5" y="90" width="297" height="126.5"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="81y-Af-XVn">
-                                        <rect key="frame" x="0.0" y="0.0" width="120" height="115.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="131" height="126.5"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.crop.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="h7x-fm-BFm">
-                                                <rect key="frame" x="27.5" y="0.5" width="65" height="64"/>
+                                                <rect key="frame" x="28" y="0.5" width="75" height="74"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="h7x-fm-BFm" secondAttribute="height" multiplier="1:1" id="eFT-nZ-mDj"/>
-                                                    <constraint firstAttribute="width" constant="65" id="xnz-X1-aBK"/>
+                                                    <constraint firstAttribute="width" constant="75" id="xnz-X1-aBK"/>
                                                 </constraints>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name SecondName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oXC-nM-Ygg">
-                                                <rect key="frame" x="0.0" y="75" width="120" height="16"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                <rect key="frame" x="0.0" y="85" width="131" height="17"/>
+                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="telegramName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Afs-bS-IGc">
-                                                <rect key="frame" x="18.5" y="101" width="83" height="14.5"/>
+                                                <rect key="frame" x="24" y="112" width="83" height="14.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -45,22 +45,22 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="AcT-FF-tiS">
-                                        <rect key="frame" x="155" y="0.0" width="120" height="115.5"/>
+                                        <rect key="frame" x="166" y="0.0" width="131" height="126.5"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.crop.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="2Ft-QA-9Ef">
-                                                <rect key="frame" x="27.5" y="0.5" width="65" height="64"/>
+                                                <rect key="frame" x="28" y="0.5" width="75" height="74"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="2Ft-QA-9Ef" secondAttribute="height" multiplier="1:1" id="ax4-bv-itk"/>
                                                 </constraints>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name SecondName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bf1-mI-sga">
-                                                <rect key="frame" x="0.0" y="75" width="120" height="16"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                <rect key="frame" x="0.0" y="85" width="131" height="17"/>
+                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="telegramName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M8I-y4-NrC">
-                                                <rect key="frame" x="18.5" y="101" width="83" height="14.5"/>
+                                                <rect key="frame" x="24" y="112" width="83" height="14.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -73,25 +73,25 @@
                                 </constraints>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="35" translatesAutoresizingMaskIntoConstraints="NO" id="ixG-eG-eib">
-                                <rect key="frame" x="22.5" y="255.5" width="275" height="115.5"/>
+                                <rect key="frame" x="11.5" y="266.5" width="297" height="126.5"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="lqv-Mc-ebV">
-                                        <rect key="frame" x="0.0" y="0.0" width="120" height="115.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="131" height="126.5"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.crop.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="0pF-MQ-3ae">
-                                                <rect key="frame" x="27.5" y="0.5" width="65" height="64"/>
+                                                <rect key="frame" x="28" y="0.5" width="75" height="74"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="0pF-MQ-3ae" secondAttribute="height" multiplier="1:1" id="wPc-CT-l0T"/>
                                                 </constraints>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name SecondName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OeP-uT-cb8">
-                                                <rect key="frame" x="0.0" y="75" width="120" height="16"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                <rect key="frame" x="0.0" y="85" width="131" height="17"/>
+                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="telegramName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hDN-dg-xzC">
-                                                <rect key="frame" x="18.5" y="101" width="83" height="14.5"/>
+                                                <rect key="frame" x="24" y="112" width="83" height="14.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -99,22 +99,22 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="qbM-L6-zRJ">
-                                        <rect key="frame" x="155" y="0.0" width="120" height="115.5"/>
+                                        <rect key="frame" x="166" y="0.0" width="131" height="126.5"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.crop.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="ICM-DL-1i4">
-                                                <rect key="frame" x="27.5" y="0.5" width="65" height="64"/>
+                                                <rect key="frame" x="28" y="0.5" width="75" height="74"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="ICM-DL-1i4" secondAttribute="height" multiplier="1:1" id="SnZ-5H-nfo"/>
                                                 </constraints>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name SecondName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d7c-LI-PHc">
-                                                <rect key="frame" x="0.0" y="75" width="120" height="16"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                <rect key="frame" x="0.0" y="85" width="131" height="17"/>
+                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="telegramName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J0l-yg-bKe">
-                                                <rect key="frame" x="18.5" y="101" width="83" height="14.5"/>
+                                                <rect key="frame" x="24" y="112" width="83" height="14.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
